--- a/fnotifystat.1
+++ b/fnotifystat.1
@@ -36,6 +36,9 @@ strip full directory path off the filenames.
 .B \-h
 show help
 .TP
+.B \-p PID
+only monitor files touched by process with pid PID.
+.TP
 .B \-t N
 only display the top busiest N files.
 .TP
