Add -P sort option
Signed-off-by: Colin Ian King <colin.king@canonical.com>

--- a/fnotifystat.1
+++ b/fnotifystat.1
@@ -39,6 +39,9 @@ show help
 .B \-p PID
 only monitor files touched by process with pid PID.
 .TP
+.B \-P
+sort stats by pid first, then by totals and filename
+.TP
 .B \-t N
 only display the top busiest N files.
 .TP
