--- a/fnotifystat.1
+++ b/fnotifystat.1
@@ -30,6 +30,10 @@ fnotifystat is a program that dumps the file system activity in a given period o
 .SH OPTIONS
 fnotifystat options are as follow:
 .TP
+.B \-c
+dump cumulative totals over all time rather than totals over each
+sample period.
+.TP
 .B \-d
 strip full directory path off the filenames.
 .TP
