Add -T timestamp option
Signed-off-by: Colin Ian King <colin.king@canonical.com>

--- a/fnotifystat.1
+++ b/fnotifystat.1
@@ -49,6 +49,9 @@ sort stats by pid first, then by totals and filename
 .B \-t N
 only display the top busiest N files.
 .TP
+.B \-T
+show timestamp
+.TP
 .B \-v
 verbose mode, dump all file activity.
 .SH EXAMPLES
