--- a/fnotifystat.1
+++ b/fnotifystat.1
@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH FNOTIFYSTAT 8 "October 2, 2014"
+.TH FNOTIFYSTAT 8 "November 13, 2014"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -16,7 +16,7 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH NAME
-fnotifystat \- a tool to measure system events.
+fnotifystat \- a tool to show file system activity.
 .br
 
 .SH SYNOPSIS
