--- a/fnotifystat.8
+++ b/fnotifystat.8
@@ -16,7 +16,7 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH NAME
-fnotifystat \- a tool to show file system activity.
+fnotifystat \- a tool to show file system activity
 .br
 
 .SH SYNOPSIS
