--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+fnotifystat (0.01.06-1) unstable; urgency=medium
+
+  * Makefile: bump version
+  * Remove trailing . from man page title
+  * Improve signal handling
+  * Introduce get_tm time helper
+
+ -- Colin King <colin.king@canonical.com>  Sun, 21 Dec 2014 22:25:00 +0000
+
 fnotifystat (0.01.05-1) unstable; urgency=medium
 
   * Makefile: bump version again
