--- a/fnotifystat.8
+++ b/fnotifystat.8
@@ -31,8 +31,7 @@ fnotifystat is a program that dumps the file system activity in a given period o
 fnotifystat options are as follow:
 .TP
 .B \-c
-dump cumulative totals over all time rather than totals over each
-sample period.
+dump cumulative totals over all time rather than totals over each sample period.
 .TP
 .B \-d
 strip full directory path off the filenames.
@@ -40,8 +39,8 @@ strip full directory path off the filenames.
 .B \-h
 show help
 .TP
-.B \-p PID
-only monitor files touched by process with pid PID.
+.B \-p proclist
+monitor specific processes. proclist is a comma separated list of process IDs or process names to monitor.
 .TP
 .B \-P
 sort stats by pid first, then by totals and filename
@@ -56,19 +55,24 @@ show timestamp
 verbose mode, dump all file activity.
 .SH EXAMPLES
 .LP
-Dump file activity every second until stopped.
+Show file activity every second until stopped.
 .RS 8
 sudo fnotifystat
 .RE
 .LP
-Dump the top 10 active files every 60 seconds until stopped.
+Show the top 10 active files every 60 seconds until stopped.
 .RS 8
 sudo fnotifystat \-t 10 60
 .RE
 .LP
-Dump file acivity every 10 seconds just 6 times.
+Show file acivity every 10 seconds just 6 times.
 .RS 8
 sudo fnotifystat 10 6
+.RE
+.LP
+Show file activity of thunderbird and process ID 1827.
+.RS 8
+sudo fnotifystat \-p thunderbird,1827
 .RE
 .SH AUTHOR
 fnotifystat was written by Colin King <colin.king@canonical.com>
