--- a/fnotifystat.8
+++ b/fnotifystat.8
@@ -100,7 +100,7 @@ sudo fnotifystat \-p thunderbird,1827
 .LP
 Show every file notify event and the top 20 active activity files over a single period of 5 minutes.
 .RS 8
-./fnotifystat \-v \-d \-c 5m 1
+sudo notifystat \-v \-d \-c 5m 1
 .RE
 .SH AUTHOR
 fnotifystat was written by Colin King <colin.king@canonical.com>
