Add SIGUSR1 verbose mode toggle
Signed-off-by: Colin Ian King <colin.king@canonical.com>

--- a/fnotifystat.8
+++ b/fnotifystat.8
@@ -76,6 +76,9 @@ Name of accessed file
 .br
 Note that the names of deleted filenames cannot be determined and are flagged by the "(deleted)" tag.
 .TE
+.TP
+.B SIGUSR1
+Sending SIGUSR1 to fnotifystat will toggle the verbose option (\-v) on/off.
 .SH EXAMPLES
 .LP
 Show file activity every second until stopped.
