--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,26 @@
+fnotifystat (0.01.07-1) unstable; urgency=medium
+
+  * Makefile: remove math lib and bump version
+  * Update man page date
+  * Update copyright year
+  * Make process name in verbose node a fixed field size
+  * Add -x, -i, -n options
+  * Pre-cache all process information
+  * Add SIGUSR1 verbose mode toggle
+  * Reduce scope of ret
+  * Reduce scope of index i
+  * Add more comments
+  * Cater for '?' get opt option
+  * Fix last example in manual
+  * Update an example in the manual
+  * Allow scaling factors of day, week, month.. to delay time
+  * Add -s scaling option
+  * Add cached proc info refresh timeout so data is not stale
+  * Make -p option list PIDs or process names
+  * Small code clean ups
+
+ -- Colin King <colin.king@canonical.com>  Sat, 10 Jan 2015 20:41:10 +0000
+
 fnotifystat (0.01.06-1) unstable; urgency=medium
 
   * Makefile: bump version
