Fix delay explanation in manual
Signed-off-by: Colin Ian King <colin.king@canonical.com>

--- a/fnotifystat.8
+++ b/fnotifystat.8
@@ -28,10 +28,9 @@ fnotifystat \- a tool to show file system activity
 fnotifystat is a program that dumps the file system activity in a given period of time.
 .br
 
-Statistics are output every 'delay' seconds. One can use the 'm' (minutes), 'h' (hours), 'd' (days), 'w' (weeks) or 'y' (years) suffix to specify large delay intervals. By default the delay 1 seconds.
+Statistics are output every 'delay' seconds. One can use the 'm' (minutes), 'h' (hours), 'd' (days), 'w' (weeks) or 'y' (years) suffix to specify large delay intervals. By default the delay is 1 second.
 
-Statistics are ouput 'count' many times before exiting. If count is not specified then
-fnotifystat will run until it is stopped.
+Statistics are ouput 'count' many times before exiting. If count is not specified then fnotifystat will run until it is stopped.
 
 .SH OPTIONS
 fnotifystat options are as follow:
