Add event count in verbose mode
Signed-off-by: Colin Ian King <colin.king@canonical.com>

--- a/fnotifystat.8
+++ b/fnotifystat.8
@@ -80,6 +80,7 @@ left;
 l.
 Date (in DD/MM/YY format)
 Time (in HH:MM:SS format)
+Event count
 Access type, O=Open, C=Close, R=Read, W=Write
 Process ID
 Process Name
