Fix typo, Pathename --> Pathname in man page
Signed-off-by: Colin Ian King <colin.king@canonical.com>

--- a/fnotifystat.8
+++ b/fnotifystat.8
@@ -43,7 +43,7 @@ Average number of closes over the sample period
 Average number of reads over the sample period
 Average number of writes over the sample period
 Process ID
-Pathename
+Pathname
 .TE
 .br
 
