--- a/fnotifystat.8
+++ b/fnotifystat.8
@@ -77,7 +77,7 @@ pathnames to include in filename activity. By defualt, all mounted filesystems a
 order statistics by unique device and inode.  Rather than ordering periodic statistics by unique filename, instead order them by unique device (major, minor) and inode number.
 .TP
 .B \-m
-merge events. The default \-v verbose output will show all new events that fanotify detects on a file by a specific process. The \-m option will merge all consecutive events that occur on the same file from the same process to reduce the amount of event output.
+merge events. The default \-v verbose output will show all new events that fnotifystat detects on a file by a specific process. The \-m option will merge all consecutive events that occur on the same file from the same process to reduce the amount of event output.
 .TP
 .B \-n
 no periodic statistics, just verbose mode only.  Do not display periodic file activity statistics, but just show the verbose mode \-v file activity.
