--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+fnotifystat (0.01.12-1) unstable; urgency=medium
+
+  * Makefile: bump version
+  * Make -x -i options work on all filenames
+  * Use strtok instead of strtok_r
+  * Check for read failure
+  * Use process comm field if we can't get cmdline info
+  * Replace hash_pjw with a faster alternative
+
+ -- Colin King <colin.king@canonical.com>  Thu, 2 Jul 2015 12:57:00 +0100
+
 fnotifystat (0.01.11-1) unstable; urgency=medium
 
   * Makefile: fix copyright dates, bump version
