Manual: fix spelling mistakes
Signed-off-by: Colin Ian King <colin.king@canonical.com>

--- a/fnotifystat.8
+++ b/fnotifystat.8
@@ -30,9 +30,9 @@ fnotifystat is a program that dumps the file system activity in a given period o
 
 Statistics are output every 'delay' seconds. One can use the 'm' (minutes), 'h' (hours), 'd' (days), 'w' (weeks) or 'y' (years) suffix to specify large delay intervals. By default the delay is 1 second.
 
-Statistics are ouput 'count' many times before exiting. If count is not specified then fnotifystat will run until it is stopped.
+Statistics are output 'count' many times before exiting. If count is not specified then fnotifystat will run until it is stopped.
 
-Note that if no file activity has occured during a sample delay period then no new statistics are output. The \-f option will force output if desired.
+Note that if no file activity has occurred during a sample delay period then no new statistics are output. The \-f option will force output if desired.
 
 By default, fnotifystat will display the following statistics every sample 'delay' seconds:
 .IP \[bu] 2
