--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+fnotifystat (0.02.03-1) unstable; urgency=medium
+
+  * Makefile: bump version
+  * Debian: update to compat level 12
+
+ -- Colin King <colin.king@canonical.com>  Mon, 12 Aug 2019 16:37:53 +0100
+
 fnotifystat (0.02.02-1) unstable; urgency=medium
 
   * Makefile: bump version
