--- a/fnotifystat.8
+++ b/fnotifystat.8
@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH FNOTIFYSTAT 8 "Apr 14, 2017"
+.TH FNOTIFYSTAT 8 "November 15, 2021"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -154,11 +154,11 @@ Just show every file notify event on /sys and /proc and no periodic statisics.
 sudo fnotifystat \-n \-i /sys,/proc
 .RE
 .SH AUTHOR
-fnotifystat was written by Colin King <colin.king@canonical.com>
+fnotifystat was written by Colin Ian King <colin.i.king@gmail.com>
 .PP
-This manual page was written by Colin King <colin.king@canonical.com>, for the Ubuntu project (but may be used by others).
+This manual page was written by Colin Ian King <colin.i.king@gmail.com>, for the Ubuntu project (but may be used by others).
 .SH COPYRIGHT
-Copyright \(co 2014-2021 Canonical Ltd.
+Copyright \(co 2014-2021 Canonical Ltd, Copyright \(co 2021 Colin Ian King.
 .br
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
