--- a/fnotifystat.8
+++ b/fnotifystat.8
@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH FNOTIFYSTAT 8 "January 12, 2024"
+.TH FNOTIFYSTAT 8 "May 15, 2024"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -92,6 +92,9 @@ monitor specific processes. proclist is a comma separated list of process IDs or
 .B \-P
 sort stats by pid first, then by totals and filename
 .TP
+.B \-r
+sort stats by number of reads first, then by totals and filename
+.TP
 .B \-s
 turn off data scaling. By default the read, write, open and close counts are displayed by scaling by multiple of thousands with suffixes of K (thousands), M (millions), B (billions).  The \-s option disables this, resulting in less aesthetically pleasing unaligned columns of data.
 .TP
@@ -116,6 +119,9 @@ Name of accessed file
 .br
 
 Note that the names of deleted filenames cannot be determined and are flagged by the "(deleted)" tag.
+.TP
+.B \-w
+sort stats by number of writes first, then by totals and filename
 .TP
 .B \-x
 pathnames to exclude from filename activity. By default, all mounted filesystems are monitored, however, this may produce to much information.  The \-x option allows one to provide a comma separated list of pathnames to exclude.  Matching is performed on partial pathnames, for example \-x /pro will exclude all paths starting with /pro, such as /proc.  Note that excluding a file with \-x takes higher precedence over including a file with \-i.
